--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 version-plugin-compose = "1.5.3"
+version-plugin-detekt = "1.23.1"
 version-plugin-kotlin = "1.9.10"
 
 version-androidx-annotation = "1.7.0"
@@ -14,6 +15,8 @@ version-test-mockk = "1.13.5"
 [libraries]
 plugin-compose = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "version-plugin-compose" }
 plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "version-plugin-kotlin" }
+plugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "version-plugin-detekt" }
+plugin-detektFormatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "version-plugin-detekt" }
 
 androidx-annotation = { module = "androidx.annotation:annotation", version.ref = "version-androidx-annotation" }
 apache-fastmath = { module = "org.apache.commons:commons-math3", version.ref = "version-apache-fastmath" }
