ide:app module was split into "shared" and "desktopApp" modules - in order to prepare the android application.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,17 @@
 [versions]
+android-sdk-compile = "34"
+android-sdk-min = "24"
+android-sdk-target = "34"
+
+version-plugin-agp = "8.1.2"
 version-plugin-compose = "1.5.3"
 version-plugin-detekt = "1.23.1"
 version-plugin-kotlin = "1.9.10"
 
+version-androidx-activity = "1.7.2"
+version-androidx-appcompat = "1.6.1"
 version-androidx-annotation = "1.7.0"
+version-androidx-lifecycle = "2.6.1"
 version-apache-fastmath = "3.6.1"
 version-kotlin-coroutines = "1.7.3"
 version-squareup-okio = "3.6.0"
@@ -13,12 +21,17 @@ version-test-kotest = "5.6.2"
 version-test-mockk = "1.13.5"
 
 [libraries]
+plugin-agp = { module = "com.android.tools.build:gradle", version.ref = "version-plugin-agp" }
 plugin-compose = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "version-plugin-compose" }
 plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "version-plugin-kotlin" }
 plugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "version-plugin-detekt" }
 plugin-detektFormatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "version-plugin-detekt" }
 
+androidx-activity = { module = "androidx.activity:activity-compose", version.ref = "version-androidx-activity" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "version-androidx-appcompat" }
 androidx-annotation = { module = "androidx.annotation:annotation", version.ref = "version-androidx-annotation" }
+androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "version-androidx-lifecycle" }
+androidx-viewModel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "version-androidx-lifecycle" }
 apache-fastmath = { module = "org.apache.commons:commons-math3", version.ref = "version-apache-fastmath" }
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "version-kotlin-coroutines" }
 kotlin-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "version-kotlin-coroutines" }
